@@ -111,6 +111,11 @@ Init_oci8lib()
 
 #ifdef RUNTIME_API_CHECK
     Init_oci8_apiwrap();
+    if (have_OCIClientVersion) {
+        sword major, minor, update, patch, port_update;
+        OCIClientVersion(&major, &minor, &update, &patch, &port_update);
+        oracle_client_version = (major << 24) | (minor << 20) | (update << 12) | (patch << 8) | port_update;
+    }
 #endif
 
     id_oci8_class = rb_intern("__oci8_class__");
