@@ -1,3 +1,12 @@
+2009-01-03  KUBO Takehiro  <kubo@jiubao.org>
+	* custom-rdoc.rb: fix for rdoc bundled with ruby 1.9.
+	* ext/oci8/apiwrap.yml, ext/oci8/oci8lib.c: set the value of
+	    OCI8.oracle_client_version by OCIClientVersion() if
+	    the binary is configured with --with-runtime-check and
+	    the Oracle client is 10.2 or upper.
+	* test/test_oranumber.rb: disable workaround code when
+	    the Oracle client is 10.2.0.4 or upper.
+
 2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/attr.c: rewrite code converting the rowid descriptor
 	    to string representation by using oci8_exec_sql().
